# St-Petersburg-Paradox

./: .gitignore  pyproject.toml
st_petersburg_paradox/: Stopwatch.py  main.py
