[tool.poetry]
name = "st-petersburg-paradox"
version = "0.1.0"
description = ""
authors = ["kimkun07 <kimkun07@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
matplotlib = "^3.9.2"

[tool.pyright]
reportUnknownMemberType = false # Suppress for matplotlib


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
